change image dimentions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing='20px'>
     <tr>
-      <td><img src="images/Zacchaeus-circle-cropped.png" alt="My Picture"></td>
+      <td><img src="images/Zacchaeus-circle-cropped.png" width="150" height="150" alt="My Picture"></td>
       <td>
         <h1>Zacchaeus Napuo</h1>
         <p><em>Web Application Developer</em></p>
