--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 
   <hr size='3' color='skyblue' align='center' width='100%'>
+  <h3>Amalitech</h3>
   <h3>Education</h3>
   <ul>
     <li>The App Brewery
